Solved homework4